:pencil: (content) update content

--- a/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
+++ b/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
@@ -1,33 +1,32 @@
 ---
 title: Getting started (Nuxt)
 description: 'Vanilla, strongly-typed store accessor.'
-category: Getting started
-position: 2
 ---
 
 ## Install module
 
 1. Install Nuxt module:
 
-    <d-code-group>
-    <d-code-block label="Yarn" active>
-  
-    ```bash
-    yarn add nuxt-typed-vuex
-    ```
-  
-    </d-code-block>
-    <d-code-block label="NPM">
-  
-    ```bash
-    npm install nuxt-typed-vuex --save
-    ```
-  
-    </d-code-block>
-  
-    </d-code-group>
+   :::::code-group
+   ::::code-block{label="Yarn" active}
 
-    <d-alert type="info">This will also install `typed-vuex` in your project, which is where the store accessor lives. All the helper functions are imported from `typed-vuex`.</d-alert>
+   ```bash
+   yarn add nuxt-typed-vuex
+   ```
+
+   ::::
+   code-block{label="NPM"}
+
+   ```bash
+   npm install nuxt-typed-vuex --save
+   ```
+
+   ::::
+   :::::
+
+   :::alert{type="info"}
+   This will also install `typed-vuex` in your project, which is where the store accessor lives. All the helper functions are imported from `typed-vuex`.
+   :::
 
 2. Add module to your `nuxt.config`:
 
@@ -37,11 +36,9 @@ position: 2
    ],
    ```
 
-   <d-alert type="info">
-
+   :::alert{type="info"}
    `buildModules` require Nuxt 2.10+. If you are using an older version, add `nuxt-typed-vuex` to `modules` instead.
-
-    </d-alert>
+   :::
 
 ## Add type definitions
 
@@ -73,7 +70,9 @@ export const accessorType = getAccessorType({
 })
 ```
 
-<d-alert type="info">This may look different if you split your modules into separate files for `state`, `actions`, `mutations` and `getters`.</d-alert>
+:::alert{type="info"}
+This may look different if you split your modules into separate files for `state`, `actions`, `mutations` and `getters`.
+:::
 
 ### Creating type definitions
 
