--- a/docs/pages/en/1.getting-started/2.getting-started-vue.md
+++ b/docs/pages/en/1.getting-started/2.getting-started-vue.md
@@ -1,38 +1,34 @@
 ---
 title: Getting started (Vue)
 description: 'Vanilla, strongly-typed store accessor.'
-category: Getting started
-position: 3
 ---
 
 If you would like to benefit from a typed accessor to your store, but you're not using Nuxt, you can still use `typed-vuex`.
 
-<d-alert>
-
+:::alert
 Many of this project's default settings are based on Nuxt, so please file an issue if you experience any problems.
-
-</d-alert>
+:::
 
 ## Setup
 
 1. Install package:
 
-   <d-code-group>
-    <d-code-block label="Yarn" active>
+   :::::code-group
+   ::::code-block{label="Yarn" active}
 
-    ```bash
-    yarn add typed-vuex
-    ```
+   ```bash
+   yarn add typed-vuex
+   ```
 
-    </d-code-block>
-    <d-code-block label="NPM">
+   ::::
+   ::::code-block{label="NPM"}
 
-    ```bash
-    npm install typed-vuex --save
-    ```
+   ```bash
+   npm install typed-vuex --save
+   ```
 
-    </d-code-block>
-   </d-code-group>
+   ::::
+   :::::
 
 2. Instantiate your accessor
 
