--- a/docs/pages/en/2.accessor/1..accessor-introduction.md
+++ b/docs/pages/en/2.accessor/1..accessor-introduction.md
@@ -1,8 +1,6 @@
 ---
 title: Introduction
 description: 'Vanilla, strongly-typed store accessor.'
-category: Accessor
-position: 10
 ---
 
 The accessor serves two purposes:
@@ -16,11 +14,9 @@ The accessor serves two purposes:
 2. Getters take priority over state (so state is not included if a getter of the same name exists).
 3. Modules are namespaced.
 
-<d-alert type="warning">
-
+:::alert{type="warning"}
 Because the accessor is flattened, you should avoid using the same name more than once between your getters, state, mutations and actions or you may receive the following error: `Cannot set property <name> of #<Object> which has only a getter.`
-
-</d-alert>
+:::
 
 So, for example:
 
