--- a/docs/pages/en/2.accessor/3.customisation.md
+++ b/docs/pages/en/2.accessor/3.customisation.md
@@ -1,8 +1,6 @@
 ---
 title: Customisation
 description: 'Vanilla, strongly-typed store accessor.'
-category: Accessor
-position: 12
 ---
 
 You might choose to customise the accessor function using the helper function `useAccessor`. You pass this an object with `state`, `actions`, `mutations`, etc. Child modules are within a `modules` property.
@@ -32,7 +30,9 @@ export default async ({ store }: Context, inject: Inject) => {
 }
 ```
 
-<d-alert>If you are using a custom accessor in a Nuxt project, bear in mind that `useAccessor` used on its own will treat modules as non-namespaced unless they include `namespaced: true`.</d-alert>
+:::alert
+If you are using a custom accessor in a Nuxt project, bear in mind that `useAccessor` used on its own will treat modules as non-namespaced unless they include `namespaced: true`.
+:::
 
 ## Typing your custom accessor
 
