--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -1,16 +1,6 @@
 ---
 title: Introduction
 description: 'Vanilla, strongly-typed store accessor.'
-category: Getting started
-position: 1
-list:
-  - store definition with vanilla Vuex code
-  - strongly typed accessor
-  - fast performance
-  - small footprint
-  - compatible with Nuxt
-  - access this.$axios and the app/store instance from within actions
-  - minimal setup/boilerplate
 ---
 
 Nuxt Typed Vuex is made up of two packages:
@@ -24,7 +14,17 @@ Typing vanilla Vuex is complicated. Many people choose a class-based approach wi
 
 `nuxt-typed-vuex` was developed to address this problem. It features:
 
-<list :items="list"></list>
+:::list
+
+- store definition with vanilla Vuex code
+- strongly typed accessor
+- fast performance
+- small footprint
+- compatible with Nuxt
+- access this.\$axios and the app/store instance from within actions
+- minimal setup/boilerplate
+
+:::
 
 ![Image showing autocomplete on this.$accessor](./images/screenshot1.png)
 
