--- a/docs/pages/en/3.store/3.mutations.md
+++ b/docs/pages/en/3.store/3.mutations.md
@@ -1,8 +1,6 @@
 ---
 title: Mutations
 description: 'Vanilla, strongly-typed store accessor.'
-category: Store
-position: 22
 ---
 
 Mutations are functions that receive store state and an optional payload.
@@ -37,10 +35,10 @@ export const mutations = mutationTree(state, {
 })
 ```
 
-<d-alert type="info">
+:::alert{type="info"}
 
 1. Even if you do not use the `mutationTree` helper function, make sure not to use the `MutationTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed mutation into [the `getAccessorType` function](/getting-started-nuxt#add-type-definitions).
 
 2. This package does not support [object-style commits](https://vuex.vuejs.org/guide/mutations.html#object-style-commit).
 
-</d-alert>
+:::
