docs: small fixes and use new code-block

--- a/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
+++ b/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
@@ -15,7 +15,7 @@ description: 'Vanilla, strongly-typed store accessor.'
    ```
 
    ::::
-   code-block{label="NPM"}
+   ::::code-block{label="NPM"}
 
    ```bash
    npm install nuxt-typed-vuex --save
