--- a/docs/pages/en/3.store/2.getters.md
+++ b/docs/pages/en/3.store/2.getters.md
@@ -11,18 +11,9 @@ This package provides a helper function to reduce boilerplate: `getterTree`. Thi
 `typed-vuex` does not currently type-check anything but the state received.
 :::
 
+:::::code-group
+::::code-block{label="Helper function" active}
 ```ts
-// Vanilla
-
-export const getters = {
-  // Type-checked
-  email: (state: RootState) => (state.emails.length ? state.emails[0] : ''),
-  // NOT type-checked
-  aDependentGetter: (_state: RootState, getters: any) => getters.email,
-}
-
-// Helper function
-
 import { getterTree } from 'typed-vuex'
 
 export const getters = getterTree(state, {
@@ -32,6 +23,19 @@ export const getters = getterTree(state, {
   aDependentGetter: (_state, getters) => getters.email,
 })
 ```
+::::
+::::code-block{label="Vanilla"}
+
+```ts
+export const getters = {
+  // Type-checked
+  email: (state: RootState) => (state.emails.length ? state.emails[0] : ''),
+  // NOT type-checked
+  aDependentGetter: (_state: RootState, getters: any) => getters.email,
+}
+```
+::::
+:::::
 
 :::alert{type="info"}
 Even if you do not use the `getterTree` helper function, make sure not to use the `GetterTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed getter into [the `getAccessorType` function](/getting-started-nuxt#add-type-definitions).
