--- a/docs/pages/en/3.store/4.actions.md
+++ b/docs/pages/en/3.store/4.actions.md
@@ -36,35 +36,10 @@ export const actions = actionTree(
 
 ## Example
 
+:::::code-group
+::::code-block{label="Helper function" active}
+
 ```ts
-// Vanilla
-import { Context } from '@nuxt/types'
-
-export const actions = {
-  async resetEmail(
-    this: Store<RootState>,
-    { state, commit }: ActionContext<RootState, RootState>,
-    payload: string
-  ) {
-    // Typed
-    state.email
-
-    // Not typed - avoid
-    commit('initialiseStore')
-
-    // Typed
-    this.app.$accessor.initialiseStore()
-  },
-  async nuxtServerInit(
-    _vuexContext: ActionContext<RootState, RootState>,
-    nuxtContext: Context
-  ) {
-    console.log(nuxtContext.req)
-  },
-}
-
-// Helper function
-
 import { actionTree } from 'typed-vuex'
 import { Context } from '@nuxt/types'
 
@@ -89,3 +64,33 @@ export const actions = actionTree(
   }
 )
 ```
+::::
+::::code-block{label="Vanilla"}
+```ts
+import { Context } from '@nuxt/types'
+
+export const actions = {
+  async resetEmail(
+    this: Store<RootState>,
+    { state, commit }: ActionContext<RootState, RootState>,
+    payload: string
+  ) {
+    // Typed
+    state.email
+
+    // Not typed - avoid
+    commit('initialiseStore')
+
+    // Typed
+    this.app.$accessor.initialiseStore()
+  },
+  async nuxtServerInit(
+    _vuexContext: ActionContext<RootState, RootState>,
+    nuxtContext: Context
+  ) {
+    console.log(nuxtContext.req)
+  },
+}
+```
+::::
+:::::
