--- a/docs/pages/en/3.store/3.mutations.md
+++ b/docs/pages/en/3.store/3.mutations.md
@@ -7,21 +7,10 @@ Mutations are functions that receive store state and an optional payload.
 
 This package provides a helper function to reduce boilerplate: `mutationTree`. This function adds typings and returns the mutations passed to it, without transforming them.
 
+:::::code-group
+::::code-block{label="Helper function" active}
+
 ```ts
-// Vanilla
-
-export const mutations = {
-  setEmail(state: RootState, newValue: string) {
-    state.email = newValue
-  },
-
-  initialiseStore() {
-    console.log('initialised')
-  },
-}
-
-// Helper function
-
 import { mutationTree } from 'typed-vuex'
 
 export const mutations = mutationTree(state, {
@@ -34,6 +23,24 @@ export const mutations = mutationTree(state, {
   },
 })
 ```
+
+::::
+::::code-block{label="Vanilla"}
+
+```ts
+export const mutations = {
+  setEmail(state: RootState, newValue: string) {
+    state.email = newValue
+  },
+
+  initialiseStore() {
+    console.log('initialised')
+  },
+}
+```
+
+::::
+:::::
 
 :::alert{type="info"}
 
