docs: update image links

--- a/docs/pages/en/1.index.md
+++ b/docs/pages/en/1.index.md
@@ -26,9 +26,9 @@ Typing vanilla Vuex is complicated. Many people choose a class-based approach wi
 
 :::
 
-![Image showing autocomplete on this.$accessor](./images/screenshot1.png)
+![Image showing autocomplete on this.$accessor](/images/screenshot1.png)
 
-![Image showing autocomplete on commit within store](./images/screenshot2.png)
+![Image showing autocomplete on commit within store](/images/screenshot2.png)
 
 ## Alternatives
 
