docs: explicit accessor definition (#234)
Co-authored-by: Daniel Roe <daniel@roe.dev>

--- a/docs/pages/en/2.accessor/1..accessor-introduction.md
+++ b/docs/pages/en/2.accessor/1..accessor-introduction.md
@@ -76,6 +76,40 @@ export default Vue.extend({
 })
 ```
 
+### Composition API
+
+```ts{}[components/sampleComponent.vue]
+import { defineComponent, computed } from '@nuxtjs/composition-api'
+
+export default defineComponent({
+  setup(_props, { root }) {
+    const counter = computed(() => root.$accessor.counter)
+
+    return {
+      counter
+    }
+  },
+})
+```
+
+Since you are already using Composition API, you might as well create a hook dedicated to this
+
+```ts{}[hooks/useAccessor.ts]
+import { wrapProperty } from '@nuxtjs/composition-api'
+
+export const useAccessor = wrapProperty('$accessor', false)
+```
+
+Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started-nuxt#add-type-definitions),
+you may want to explicitly define accessor types like in the following example:
+
+```ts{}[hooks/useAccessor.ts]
+import { wrapProperty } from '@nuxtjs/composition-api'
+import { accessorType } from '~/store'
+
+export const useAccessor = (): typeof accessorType => (wrapProperty('$accessor', false))()
+```
+
 ### Middleware
 
 ```ts{}[middleware/test.ts]
