--- a/docs/pages/en/3.store/4.actions.md
+++ b/docs/pages/en/3.store/4.actions.md
@@ -34,6 +34,25 @@ export const actions = actionTree(
 )
 ```
 
+Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started-nuxt#add-type-definitions),
+you may want to explicitly define accessor types like in the following examples: 
+
+```ts
+export const actions = actionTree(
+  { state, getters, mutations },
+  {
+    async resetEmail(): Promise<void> {
+      // accessor as an explicitly typed constant
+      const accessor: typeof accessorType = this.app.$accessor
+      accessor.anotherModule.doSomething()
+
+      // inline type definition
+      (this.app.$accessor as typeof accessorType).anotherModule.doSomething()
+    },
+  }
+)
+```
+
 ## Example
 
 :::::code-group
