docs: fix links to `getting-started-nuxt` page

--- a/docs/pages/en/2.accessor/1..accessor-introduction.md
+++ b/docs/pages/en/2.accessor/1..accessor-introduction.md
@@ -43,7 +43,7 @@ this.$accessor.submodule.id
 
 Adding types is simple. A helper function, `getAccessorType`, is provided, which compiles to nothing and only serves to return the correct type of the accessor so that it can be used where you see fit.
 
-Make sure you define types correctly following [these instructions](/getting-started-nuxt#add-type-definitions).
+Make sure you define types correctly following [these instructions](/getting-started/getting-started-nuxt#add-type-definitions).
 
 ## Using the accessor
 
@@ -100,7 +100,7 @@ import { wrapProperty } from '@nuxtjs/composition-api'
 export const useAccessor = wrapProperty('$accessor', false)
 ```
 
-Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started-nuxt#add-type-definitions),
+Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started/getting-started-nuxt#add-type-definitions),
 you may want to explicitly define accessor types like in the following example:
 
 ```ts{}[hooks/useAccessor.ts]
