--- a/docs/pages/en/3.store/2.getters.md
+++ b/docs/pages/en/3.store/2.getters.md
@@ -38,5 +38,5 @@ export const getters = {
 :::::
 
 :::alert{type="info"}
-Even if you do not use the `getterTree` helper function, make sure not to use the `GetterTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed getter into [the `getAccessorType` function](/getting-started-nuxt#add-type-definitions).
+Even if you do not use the `getterTree` helper function, make sure not to use the `GetterTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed getter into [the `getAccessorType` function](/getting-started/getting-started-nuxt#add-type-definitions).
 :::
