--- a/docs/pages/en/3.store/4.actions.md
+++ b/docs/pages/en/3.store/4.actions.md
@@ -13,7 +13,7 @@ If you use the helper function, only the `commit` method is typed - and only for
 
 :::alert{type="info"}
 
-1. Even if you do not use the `actionTree` helper function, make sure not to use the `ActionTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an incompatible action into [the `getAccessorType` function](/getting-started-nuxt#add-type-definitions).
+1. Even if you do not use the `actionTree` helper function, make sure not to use the `ActionTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an incompatible action into [the `getAccessorType` function](/getting-started/getting-started-nuxt#add-type-definitions).
 
 2. This package does not support [object-style dispatches](https://vuex.vuejs.org/guide/actions.html).
 
@@ -34,7 +34,7 @@ export const actions = actionTree(
 )
 ```
 
-Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started-nuxt#add-type-definitions),
+Should your IDE not properly recognize type declarations setup as described in [these instructions](/getting-started/getting-started-nuxt#add-type-definitions),
 you may want to explicitly define accessor types like in the following examples: 
 
 ```ts
