--- a/docs/pages/en/3.store/3.mutations.md
+++ b/docs/pages/en/3.store/3.mutations.md
@@ -44,7 +44,7 @@ export const mutations = {
 
 :::alert{type="info"}
 
-1. Even if you do not use the `mutationTree` helper function, make sure not to use the `MutationTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed mutation into [the `getAccessorType` function](/getting-started-nuxt#add-type-definitions).
+1. Even if you do not use the `mutationTree` helper function, make sure not to use the `MutationTree` type provided by Vuex. This will interfere with type inference. You won't lose out by omitting it, as Typescript will complain if you pass an improperly formed mutation into [the `getAccessorType` function](/getting-started/getting-started-nuxt#add-type-definitions).
 
 2. This package does not support [object-style commits](https://vuex.vuejs.org/guide/mutations.html#object-style-commit).
 
