add $accessor typing for Nuxt context

--- a/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
+++ b/docs/pages/en/1.getting-started/1.getting-started-nuxt.md
@@ -91,5 +91,9 @@ declare module '@nuxt/types' {
   interface NuxtAppOptions {
     $accessor: typeof accessorType
   }
+  
+  interface Context {
+    $accessor: typeof accessorType,
+  }
 }
 ```
