docs: clarify methods should be mapped within

--- a/docs/pages/en/2.accessor/1.accessor-introduction.md
+++ b/docs/pages/en/2.accessor/1.accessor-introduction.md
@@ -141,11 +141,14 @@ export default Vue.extend({
     // Direct mapping to a property
     ...mapper('name'),
     // or array of properties
-    ...mapper(['name', 'email]),
+    ...mapper(['name', 'email']),
     // or submodules
-    ...mapper('submodule', ['name', 'email]),
+    ...mapper('submodule', ['name', 'email']),
   },
   methods: {
+    // All your methods should be included in the methods object,
+    // whether they are mutations, actions (or even a method returned
+    // by a getter or stored in state)
     ...mapper('resetName'),
     resetEmail() {
       // You can access directly off your component instance
