--- a/docs/pages/en/2.accessor/1.accessor-introduction.md
+++ b/docs/pages/en/2.accessor/1.accessor-introduction.md
@@ -86,7 +86,7 @@ export default defineComponent({
     const counter = computed(() => root.$accessor.counter)
 
     return {
-      counter
+      counter,
     }
   },
 })
@@ -107,7 +107,8 @@ you may want to explicitly define accessor types like in the following example:
 import { wrapProperty } from '@nuxtjs/composition-api'
 import { accessorType } from '~/store'
 
-export const useAccessor = (): typeof accessorType => (wrapProperty('$accessor', false))()
+export const useAccessor = (): typeof accessorType =>
+  wrapProperty('$accessor', false)()
 ```
 
 ### Middleware
@@ -119,4 +120,41 @@ export default ({ redirect, app: { $accessor } }: Context) => {
   // You can access the store here
   if ($accessor.email) return redirect('/')
 }
+```
+
+## Mapping properties into your component
+
+`typed-vuex` also exports a convenience helper function to allow you to easily map the accessor into your component.
+
+```ts{}[components/sampleComponent.vue]
+import Vue from 'vue'
+
+// Nuxt
+import { accessorType } from '~/store'
+const mapper = createMapper(accessorType)
+// Vue
+import { accessor } from './src/store'
+const mapper = createMapper(accessor)
+
+export default Vue.extend({
+  computed: {
+    // Direct mapping to a property
+    ...mapper('name'),
+    // or array of properties
+    ...mapper(['name', 'email']),
+    // or submodules
+    ...mapper('submodule', ['name', 'email']),
+  },
+  methods: {
+    // All your methods should be included in the methods object,
+    // whether they are mutations, actions (or even a method returned
+    // by a getter or stored in state)
+    ...mapper('resetName'),
+    resetEmail() {
+      // You can access directly off your component instance
+      console.log(this.name, this.email)
+      this.resetName()
+    },
+  },
+})
 ```
