Fix code style, return back missing line from docs

--- a/docs/pages/en/2.accessor/2.dynamic-modules.md
+++ b/docs/pages/en/2.accessor/2.dynamic-modules.md
@@ -1,5 +1,6 @@
 ---
 title: Dynamic modules description: 'Vanilla, strongly-typed store accessor.'
+description: 'Vanilla, strongly-typed store accessor.'
 ---
 
 You can also use `typed-vuex` with dynamic modules.
