--- a/docs/pages/en/2.accessor/2.dynamic-modules.md
+++ b/docs/pages/en/2.accessor/2.dynamic-modules.md
@@ -1,5 +1,5 @@
 ---
-title: Dynamic modules description: 'Vanilla, strongly-typed store accessor.'
+title: Dynamic modules
 description: 'Vanilla, strongly-typed store accessor.'
 ---
 
