For #266: Add docs info about including module methods to tsconfig for inline typing

--- a/docs/pages/en/2.accessor/2.dynamic-modules.md
+++ b/docs/pages/en/2.accessor/2.dynamic-modules.md
@@ -138,3 +138,16 @@ export default Vue.extend({
   }
 })
 ```
+
+### Typed $accessor methods
+If you want methods `$accessorRegisterModule` and `$accessorUnregisterModule` to be typed, please add `nuxt-typed-vuex` package to `tsconfig.json` types.
+
+```json{}[tsconfig.json]
+{
+  {
+    "types": [
+      "nuxt-typed-vuex"
+    ]
+  }
+}
+```
