For #266: add dynamic property to store interfaces to match #272 fixes, update docs with non-spread usage example

--- a/docs/pages/en/2.accessor/2.dynamic-modules.md
+++ b/docs/pages/en/2.accessor/2.dynamic-modules.md
@@ -73,6 +73,7 @@ for large projects with no able of using `useAccessor` as variable.
 ```ts{}[store/index.ts]
 import * as myImportedModule from '~/modules/myImportedModule'
 import * as myNestedModule from '~/modules/myNestedModule'
+import * as myDynamicModuleNoSpread from '~/modules/myImportedModuleNoSpread'
 
 export const accessorType = getAccessorType({
   state,
@@ -83,13 +84,25 @@ export const accessorType = getAccessorType({
     submodule: {
       //add this for module to show as possibly-undefined when using $accessor
       dynamic: true,
+      namespaced: true,
       ...myImportedModule,
       modules: {
         myNestedModule,
       },
     },
+    //You can add `export const dynamic = true;` inside module so you don't need to use spread operator in that case
+    //View the example below
+    submoduleWithoutSpread: myDynamicModuleNoSpread,
   },
 })
+```
+
+```ts{}[modules/myImportedModuleNoSpread.ts]
+export const dynamic = true;
+
+export const state = () => ({
+  //...
+});
 ```
 
 ### Modules registration
